kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-eksf
  namespace: python-web-app-eksf
spec:
  selector:
    app: python-web-app-eksf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
